--- a/fisl/17/heroku-confboilerplate/package.json
+++ b/fisl/17/heroku-confboilerplate/package.json
@@ -39,6 +39,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rsync": "0.0.6",
+    "gulp-watch-less": "^1.0.1",
     "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0",
     "run-sequence": "^1.2.2"
